# Fullmetal-Anatomist

./: .gitignore  LICENSE  README.md  launch.py  pyproject.toml  spec.md
backend/: chapter_parser.py  chat_agent.py  config.py  database.py  encryption.py  file_ingestor.py  main.py  pdf_renderer.py  provider_manager.py  worksheet_generator.py
backend/routers/: chapters.py  chat.py  settings.py  subjects.py  worksheets.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatInput.tsx  ChatView.tsx  FileUploadZone.tsx  FillInBlankQuestion.tsx  Layout.tsx  MessageList.tsx  SettingsModal.tsx  SetupWizard.tsx  Sidebar.tsx  TopBar.tsx  WorksheetActions.tsx  WorksheetLibrary.tsx  WorksheetViewer.tsx
frontend/src/hooks/: useChat.ts  useSettings.ts  useWorksheet.ts
frontend/src/types/: index.ts
frontend/src/utils/: scoring.ts
templates/: worksheet.html
tests/: test_api.py  test_chapter_parser.py
